# dtc_de_2026

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  main.py  pyproject.toml
01-docker-terraform/: Makefile  README.md  docker-compose.yml
01-docker-terraform/docker_ingestion_pipeline/: config.py  glossary.md  logicCode.md
01-docker-terraform/docker_ingestion_pipeline/core/: ingestion_pipeline.py
01-docker-terraform/docker_ingestion_pipeline/db/: client.py  loader_parquet.py  lock.py  swapper.py  validator_repo.py
01-docker-terraform/docker_ingestion_pipeline/ports/: database.py  swapper.py  validator.py
01-docker-terraform/docker_ingestion_pipeline/utils/: datetime_fix.py  downloader.py  file_types.py
01-docker-terraform/sql/: homework_query.sql
01-docker-terraform/terraform/: outputs.tf  variables.tf
01-docker-terraform/terraform/modules/bigquery/: main.tf  outputs.tf
01-docker-terraform/terraform/modules/gcs/: variables.tf
docker_ingestion_pipeline/: Dockerfile  __init__.py  config.py
docker_ingestion_pipeline/core/: __init__.py  ingestion_pipeline.py
docker_ingestion_pipeline/db/: __init__.py  loader_csv.py  loader_parquet.py  loader_tsv.py  lock.py  optimize.py  schema.py  validator_repo.py
docker_ingestion_pipeline/ports/: __init__.py  loader.py  lock.py  schema.py
docker_ingestion_pipeline/utils/: __init__.py  datetime_fix.py  downloader.py  identifiers.py  progress.py
terraform/: main.tf  providers.tf
terraform/modules/bigquery/: variables.tf
terraform/modules/gcs/: main.tf  outputs.tf
